# KENEC

./: .env.template  README.md  _model.py  main.py  pyproject.toml
errors/: database.py  kenec.py
modal/database/node/: __init__.py  _article.py  _article_group.py  _entity.py  _entity_group.py  _keyword_group.py  _source.py
modal/database/node/_common/: __init__.py  _base.py
modal/database/util/: auth.py
modules/database/: __init__.py  _base.py  neo4j.py
modules/keyword_extractor/: __init__.py  _base.py  yake.py
modules/ner/: __init__.py  _base.py  flair.py  spacy.py  xlm_roberta_large_finetuned_conll03_english.py
type/: __init__.py  _index_constraint.py  database.py
type/article/: __init__.py  entity.py  keyword.py
