[project]
name = "kenec"
version = "0.1.0"
description = "The Keyword & Entity based News Event Clustering framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flair>=0.15.1",
    "neo4j-rust-ext>=6.0.3.0",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "spacy>=3.8.11",
    "transformers>=4.57.1",
    "yake>=0.6.0",
]
